--- a/contact.css
+++ b/contact.css
@@ -6,7 +6,7 @@ body
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
-	background-position: 0% 85%;
+	background-position: 0% 90%;
 }
 
 header
@@ -50,17 +50,17 @@ nav a
 
 nav a:hover
 {
-    border-bottom: 1px solid;
+    border-bottom: 2px solid;
 }
 
 article
 {
-	font-size: 1.04em;
+	font-size: 1.08em;
 	color: black;
 	text-align: CENTER;
 	text-align-last : center;
 	background-color: #f8f8f8;
-	opacity: 0.85;
+	opacity: 0.80;
 	padding: 0em 1.5em;
 	margin: auto;
 	width: 28%;
@@ -78,31 +78,31 @@ article
 @keyframes fadein
 {
     from { opacity: 0; }
-    to   { opacity: 0.85; }
+    to   { opacity: 0.80; }
 }
 
 @-moz-keyframes fadein
 {
     from { opacity: 0; }
-    to   { opacity: 0.85; }
+    to   { opacity: 0.80; }
 }
 
 @-webkit-keyframes fadein
 {
     from { opacity: 0; }
-    to   { opacity: 0.85; }
+    to   { opacity: 0.80; }
 }
 
 @-ms-keyframes fadein
 {
     from { opacity: 0; }
-    to   { opacity: 0.85; }
+    to   { opacity: 0.80; }
 }
 
 @-o-keyframes fadein
 {
     from { opacity: 0; }
-    to   { opacity: 0.85; }
+    to   { opacity: 0.80; }
 }
 
 .second
@@ -142,6 +142,11 @@ article
 	position: fixed;
 	bottom: 0;
 	right: 0.5%;
+}
+
+#Instagram
+{
+	padding-right: 5px;
 }
 
 footer img
