--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
-	background-position: 0% 85%;
+	background-position: 0% 90%;
 }
 
 header
@@ -85,7 +85,7 @@ nav a
 
 nav a:hover
 {
-    border-bottom: 1px solid;
+    border-bottom: 2px solid;
 }
 
 .ENG
@@ -137,6 +137,11 @@ nav a:hover
 	position: fixed;
 	bottom: 0;
 	right: 0.5%;
+}
+
+#Instagram
+{
+	padding-right: 5px;
 }
 
 footer img
