--- a/about.css
+++ b/about.css
@@ -1,10 +1,10 @@
 body
 {
 	background-image: url("2.jpg");
-	background-size: 1920px 1080px;
 	margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
 	background-repeat: no-repeat;
+	background-size: cover;
 	background-attachment: fixed;
 	background-position: 0% 90%;
 }
