--- a/contact.css
+++ b/contact.css
@@ -7,6 +7,7 @@ body
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: 0% 90%;
+	overflow: hidden;
 }
 header
 {
@@ -24,8 +25,8 @@ header
 {
     width: 200px;
     height: 66px;
-	margin-left: 70px;
-	margin-top : 20px;
+	margin-left: 35%;
+	margin-top : 10%;
 }
 #nav
 {
@@ -33,7 +34,7 @@ display: flex;
 justify-content: space-between;
 flex-direction: row;
 }
-nav a
+#nav a
 {
     font-size: 1.35em;
     color: white;
@@ -42,9 +43,26 @@ nav a
     text-decoration: none;
 	margin-right: 70px;
 }
-nav a:hover
+#nav a:hover
 {
     border-bottom: 2px solid;
+}
+#nav2
+{
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	margin-left: -6%;
+	margin-right: 4%;
+	margin-top: 8%;
+}
+#nav2 a
+{ 
+	font-size: 1.1em;
+	color: white;
+	text-shadow: 2px 1px 2px black;
+    padding-bottom: 3px;
+    text-decoration: none;
 }
 article
 {
@@ -56,7 +74,7 @@ article
 	opacity: 0.80;
 	padding: 0em 1.5em;
 	width: 28%;
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -135,20 +153,27 @@ footer img
 	width: 32px;
     height: 32px;
 }
-@-media (max-width: 768px)
+@media (min-width: 768px) {
+	#nav2 {
+		display: none;
+	}
+}
+@media (max-width: 768px) {
     .quote {
         display: none;
 	}
-	.body {
-		background-position: 0%, 100%;
+	#nav {
+		display: none;
 	}
-	.background-image {
-		justify-content: center;
+	#logo {
+		margin-left: 4%;
 	}
-	.header {
-		justify-content: space-evenly;
+	body {
+		background-position: 47% 50%;
 	}
-	.article {
+	article {
+		height: auto;
 		width: 80%;
-		height: 64%;
+		font-size: 0.9em;
 	}
+}
