--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: 0% 90%;
+	overflow: hidden;
 }
 header
 {
@@ -54,8 +55,8 @@ header
 {
     width: 200px;
     height: 66px;
-	margin-left: 70px;
-	margin-top : 20px;
+	margin-left: 35%;
+	margin-top : 10%;
 }
 #nav
 {
@@ -63,7 +64,7 @@ display: flex;
 justify-content: space-between;
 flex-direction: row;
 }
-nav a
+#nav a
 {
     font-size: 1.35em;
     color: white;
@@ -72,9 +73,26 @@ nav a
     text-decoration: none;
 	margin-right: 70px;
 }
-nav a:hover
+#nav a:hover
 {
     border-bottom: 2px solid;
+}
+#nav2
+{
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	margin-left: -6%;
+	margin-right: 4%;
+	margin-top: 8%;
+}
+#nav2 a
+{ 
+	font-size: 1.1em;
+	color: white;
+	text-shadow: 2px 1px 2px black;
+    padding-bottom: 3px;
+    text-decoration: none;
 }
 .ENG
 {
@@ -132,8 +150,22 @@ footer img
 	width: 32px;
     height: 32px;
 }
+@media (min-width: 768px) {
+	#nav2 {
+		display: none;
+	}
+}
 @media (max-width: 768px) {
-    #quote {
+    .quote {
         display: none;
-    }
+	}
+	#nav {
+		display: none;
+	}
+	#logo {
+		margin-left: 4%;
+	}
+	body {
+		background-position: 47% 50%;
+	}
 }
