--- a/contact.css
+++ b/contact.css
@@ -68,7 +68,7 @@ article
 {
 	font-size: 1.08em;
 	color: black;
-	text-align: CENTER;
+	text-align: justify;
 	text-align-last : center;
 	background-color: #f8f8f8;
 	opacity: 0.80;
