--- a/productions.css
+++ b/productions.css
@@ -396,7 +396,7 @@ footer img
 		background-position: 47% 50%;
 	}
 	article {
-		height: auto;
+		height: 80%;
 		width: 80%;
 		font-size: 0.9em;
 	}
