--- a/contact.css
+++ b/contact.css
@@ -166,7 +166,7 @@ footer img
 		display: none;
 	}
 	.copyright {
-		font-size: 0.70em;
+		font-size: 0.60em;
 	}
 	#logo {
 		margin-left: 4%;
@@ -175,7 +175,7 @@ footer img
 		background-position: 47% 50%;
 	}
 	article {
-		height: 50%;
+		height: auto;
 		width: 80%;
 		font-size: 0.8em;
 		overflow: scroll;
