--- a/productions.css
+++ b/productions.css
@@ -368,7 +368,7 @@ footer img
 		background-position: 47% 50%;
 	}
 	article {
-		height: auto;
+		height: 50%;
 		width: 80%;
 		font-size: 0.8em;
 	}
