--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -450,6 +450,16 @@ input, select, textarea {
 		max-width: 100%;
 		text-align: center;
 	}
+	
+	#header .logo {
+		width: 100%; /* Make the logo container take full width */
+		text-align: center; /* Center the logo within its container */
+	}
+
+	#header .logo img {
+		max-width: 100%; /* Make sure the image doesn't exceed its container width */
+		height: auto; /* Maintain the aspect ratio of the image */
+	}
 
 		#header > * {
 			-moz-transition: opacity 0.325s ease-in-out;
