--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -687,6 +687,13 @@ input, select, textarea {
 				}
 
 		}
+		
+		@media only screen and (max-width: 600px) {
+			img {
+				width: 50%; 
+				height: auto;
+			}
+		}
 
 /* Main */
 
