--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -695,8 +695,8 @@ input, select, textarea {
 		
 		@media only screen and (max-width: 480px) {
 			img {
-				width: 100%; 
-				height: 100%;
+				width: auto; 
+				height: auto;
 			}
 		}
 		
